version: "0.1.0"
opam-version: "1.2"
maintainer: "derutakayu@gmail.com"
authors: "derui"
license: "MIT"
homepage: "https://github.com/derui/jsoo-template"
bug-reports: "https://github.com/derui/jsoo-template"
dev-repo: "https://github.com/derui/jsoo-template"
tags: []
build: [
  ["jbuilder" "subst"] {pinned}
  ["jbuilder" "build" "-p" name "-j" jobs]
  ["jbuilder" "runtest" "-p" name "-j" jobs] {test}
]
depends: [
  "ocamlfind" {build}
  "cmdliner" {>= "1.0.2"}
  "topkg" {build & >= "0.9.1"}
  "jbuilder" {build & >= "1.0+beta16"}
]
available: [ocaml-version >= "4.05.0"]
